==> bmorcelli/io433/lib/SmartRC-CC1101-Driver-Lib/ELECHOUSE_CC1101_SRC_DRV.cpp <==
#include <SPI.h>
#include <Wire.h>
#include "ELECHOUSE_CC1101_SRC_DRV.h"
#include <Arduino.h>
#define   WRITE_BURST       0x40            //write burst
#define   READ_SINGLE       0x80            //read single
#define   READ_BURST        0xC0            //read burst
#define   BYTES_IN_RXFIFO   0x7F            //byte number in RXfifo

void ELECHOUSE_CC1101::SpiStart(void)
{
  if(!_spiOverI2C) {
  // initialize the SPI pins
  pinMode(SCK_PIN, OUTPUT);
  pinMode(MOSI_PIN, OUTPUT);
  pinMode(MISO_PIN, INPUT);
  pinMode(SS_PIN, OUTPUT);

  // enable SPI
  #ifdef ESP32
  SPI.begin(SCK_PIN, MISO_PIN, MOSI_PIN, SS_PIN);
  #else
  SPI.begin();
  #endif
  }
  else I2CStart();
}

void ELECHOUSE_CC1101::SpiEnd(void)
{
  if(!_spiOverI2C) {
  // disable SPI
  SPI.endTransaction();
  SPI.end();
  digitalWrite(SCK_PIN, LOW);
  }
  else I2CEnd();
}

void ELECHOUSE_CC1101::GDO_Set (void)
{
  if(!_spiOverI2C) {
	pinMode(GDO0, INPUT);
	pinMode(GDO2, OUTPUT);
  }
  else {
  uint8_t out[1] = { 1 }; // Output mode
  uint8_t inp[1] = { 0 }; // Output mode

  writeI2CBytes(GDO0, inp,1);
  writeI2CBytes(GDO2, out,1);
  }
}

void ELECHOUSE_CC1101::Reset (void)
{
  if(!_spiOverI2C) {
	digitalWrite(SS_PIN, LOW);
	delay(1);
	digitalWrite(SS_PIN, HIGH);
	delay(1);
	digitalWrite(SS_PIN, LOW);
	while(digitalRead(MISO_PIN));
  SPI.transfer(CC1101_SRES);
  while(digitalRead(MISO_PIN));
	digitalWrite(SS_PIN, HIGH);
  }
  else {
    spiOverI2C(CC1101_SRES);
  }
}

void ELECHOUSE_CC1101::Init(void)
{
  setSpi();
  SpiStart();                   //spi initialization
  digitalWrite(SS_PIN, HIGH);
  digitalWrite(SCK_PIN, HIGH);
  digitalWrite(MOSI_PIN, LOW);
  Reset();                    //CC1101 reset
  RegConfigSettings();            //CC1101 register config
  if(!_spiOverI2C) SpiEnd();
}

void ELECHOUSE_CC1101::SpiWriteReg(byte addr, byte value)
{
  if(!_spiOverI2C) {
  SpiStart();
  digitalWrite(SS_PIN, LOW);
  while(digitalRead(MISO_PIN));
  SPI.transfer(addr);
  SPI.transfer(value); 
  digitalWrite(SS_PIN, HIGH);
  SpiEnd();
  }
  else {
    spiOverI2C(addr,true,value);
  }
}

void ELECHOUSE_CC1101::SpiWriteBurstReg(byte addr, byte *buffer, byte num)
{
  byte i, temp;
  SpiStart();
  temp = addr | WRITE_BURST;
  if(!_spiOverI2C){
    digitalWrite(SS_PIN, LOW);
    while(digitalRead(MISO_PIN));
    SPI.transfer(temp);
    for (i = 0; i < num; i++)
    {
    SPI.transfer(buffer[i]);
    }
    digitalWrite(SS_PIN, HIGH);
    SpiEnd();
  } else {
    for (i = 0; i < num; i++)
    {
    spiOverI2C(buffer[i]);
    }
  }
}

void ELECHOUSE_CC1101::SpiStrobe(byte strobe)
{
  if(!_spiOverI2C){
  SpiStart();
  digitalWrite(SS_PIN, LOW);
  while(digitalRead(MISO_PIN));
  SPI.transfer(strobe);
  digitalWrite(SS_PIN, HIGH);
  SpiEnd();
  } else {
    spiOverI2C(strobe);
  }
}

byte ELECHOUSE_CC1101::SpiReadReg(byte addr) 
{
  byte temp, value;
  SpiStart();
  temp = addr| READ_SINGLE;

  digitalWrite(SS_PIN, LOW);
  while(digitalRead(MISO_PIN));
  SPI.transfer(temp);
  value=SPI.transfer(0);
  digitalWrite(SS_PIN, HIGH);
  SpiEnd();

  return value;
}

void ELECHOUSE_CC1101::SpiReadBurstReg(byte addr, byte *buffer, byte num)
{
  byte i,temp;
  temp = addr | READ_BURST;
  if(!_spiOverI2C) {
    SpiStart();
    digitalWrite(SS_PIN, LOW);
    while(digitalRead(MISO_PIN));
    SPI.transfer(temp);
    for(i=0;i<num;i++)
    {
    buffer[i]=SPI.transfer(0);
    }
    digitalWrite(SS_PIN, HIGH);
    SpiEnd();
  } else {
    for(i=0;i<num;i++)
    {
    buffer[i]=readSpiOverI2C(temp);
    }

  }
}

byte ELECHOUSE_CC1101::SpiReadStatus(byte addr) 
{
  byte value,temp;
  temp = addr | READ_BURST;
  if(!_spiOverI2C) {
    SpiStart();
    digitalWrite(SS_PIN, LOW);
    while(digitalRead(MISO_PIN));
    SPI.transfer(temp);
    value=SPI.transfer(0);
    digitalWrite(SS_PIN, HIGH);
    SpiEnd();
  } else {
    value = readSpiOverI2C(temp);
  }
  return value;
}

void ELECHOUSE_CC1101::SendData(char *txchar)
{
int len = strlen(txchar);
byte chartobyte[len];
for (int i = 0; i<len; i++){chartobyte[i] = txchar[i];}
SendData(chartobyte,len);
}

void ELECHOUSE_CC1101::SendData(byte *txBuffer,byte size)
{
  SpiWriteReg(CC1101_TXFIFO,size);
  SpiWriteBurstReg(CC1101_TXFIFO,txBuffer,size);      //write data to send
  SpiStrobe(CC1101_SIDLE);
  SpiStrobe(CC1101_STX);                  //start send
    while (!digitalRead(GDO0));               // Wait for GDO0 to be set -> sync transmitted  
    while (digitalRead(GDO0));                // Wait for GDO0 to be cleared -> end of packet
  SpiStrobe(CC1101_SFTX);                 //flush TXfifo
  trxstate=1;
}

void ELECHOUSE_CC1101::SendData(char *txchar,int t)
{
int len = strlen(txchar);
byte chartobyte[len];
for (int i = 0; i<len; i++){chartobyte[i] = txchar[i];}
SendData(chartobyte,len,t);
}

void ELECHOUSE_CC1101::SendData(byte *txBuffer,byte size,int t)
{
  SpiWriteReg(CC1101_TXFIFO,size);
  SpiWriteBurstReg(CC1101_TXFIFO,txBuffer,size);      //write data to send
  SpiStrobe(CC1101_SIDLE);
  SpiStrobe(CC1101_STX);                  //start send
  delay(t);
  SpiStrobe(CC1101_SFTX);                 //flush TXfifo
  trxstate=1;
}
